--- a/baseapp/templates/baseapp/resume.html
+++ b/baseapp/templates/baseapp/resume.html
@@ -10,7 +10,12 @@
           <div class="section-title">
             <h2>Resume</h2>
           </div>
-  
+          <div class="row" data-aos="fade-up">
+            <div class="col-lg-12 my-1 d-flex justify-content-center">
+              <h3 class="resume-title">Education and Membership</h3>
+            </div>
+            <hr>
+          </div>
           <div class="row">
             <div class="col-lg-6" data-aos="fade-up">
               <h3 class="resume-title">Education</h3>
@@ -24,9 +29,7 @@
 
        
             </div>
-
             <div class="col-lg-6" data-aos="fade-up">
-  
               <h3 class="resume-title">Membership</h3>
               {% for membership in memberships%}
               <div class="resume-item">
@@ -43,6 +46,7 @@
               <div class="col-lg-12 my-4 d-flex justify-content-center">
                 <h3 class="resume-title">Professional Experience</h3>
               </div>
+              <hr>
             </div>
             {% for experience in experiences %}
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -52,7 +56,7 @@
                 <h5>{{experience.starting_date}} - {{experience.ending_date}}</h5>
                 <p><em>{{experience.work_place}} </em></p>
                 <ul>
-                  {% for description in descriptions %}
+                  {% for description in experience.jobdescription_set.all %}
                   <li>{{description.description}}</li>
                   {% endfor %}
                 </ul>
