--- a/baseapp/templates/baseapp/base.html
+++ b/baseapp/templates/baseapp/base.html
@@ -42,23 +42,23 @@
         <img src="{% static 'assets/img/aya.jpg' %}" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="">Ahmad Yakubu Ahmad</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-github"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://twitter.com/ahmadyakubuaya" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://web.facebook.com/ahmad.yakubuahmad.7/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/aya2685/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://github.com/engraya" target="_blank" class="google-plus"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/ahmad-yakubu-ahmad-miaeng-gmnse-41520b121/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
           <li><a href="{% url 'home' %}" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="{% url 'about' %}" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="{% url 'resume' %}" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="{% url 'portfolio' %}" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="{% url 'socials' %}" class="nav-link scrollto"><i class="bx bx-chat"></i> <span>Socials</span></a></li>
-          <li><a href="{% url 'certifications' %}" class="nav-link scrollto"><i class="bx bx-medal"></i> <span>Certifications</span></a></li>
-          <li><a href="{% url 'contact' %}" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="{% url 'about' %}" class="nav-link scrollto active"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="{% url 'resume' %}" class="nav-link scrollto active"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="{% url 'portfolio' %}" class="nav-link scrollto active"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="{% url 'socials' %}" class="nav-link scrollto active"><i class="bx bx-chat"></i> <span>Socials</span></a></li>
+          <li><a href="{% url 'certifications' %}" class="nav-link scrollto active"><i class="bx bx-medal"></i> <span>Certifications</span></a></li>
+          <li><a href="{% url 'contact' %}" class="nav-link scrollto active"><i class="bx bx-envelope"></i> <span>Contact Me</span></a></li>
           <li><a href="{% url 'detail' %}" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Detail</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -79,10 +79,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
-      </div>
-      <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        &copy;<strong><span>engraya</span></strong>
       </div>
     </div>
   </footer><!-- End  Footer -->
