--- a/baseapp/templates/baseapp/base.html
+++ b/baseapp/templates/baseapp/base.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>My PortFolio</title>
+  <title>Engraya_resume</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -55,7 +55,7 @@
           <li><a href="{% url 'home' %}" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="{% url 'about' %}" class="nav-link scrollto active"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="{% url 'resume' %}" class="nav-link scrollto active"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="{% url 'portfolio' %}" class="nav-link scrollto active"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="{% url 'portfolio' %}" class="nav-link scrollto active"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
           <li><a href="{% url 'socials' %}" class="nav-link scrollto active"><i class="bx bx-chat"></i> <span>Socials</span></a></li>
           <li><a href="{% url 'certifications' %}" class="nav-link scrollto active"><i class="bx bx-medal"></i> <span>Certifications</span></a></li>
           <li><a href="{% url 'contact' %}" class="nav-link scrollto active"><i class="bx bx-envelope"></i> <span>Contact Me</span></a></li>
