--- a/baseapp/templates/baseapp/resume.html
+++ b/baseapp/templates/baseapp/resume.html
@@ -24,6 +24,9 @@
                 <h4>{{education.title}}</h4>
                 <h5>{{education.starting_date}} - {{education.ending_date}}</h5>
                 <p><em>{{education.institution}}</em></p>
+                {% for certificate in education.educationcertificate_set.all %}
+                <a class="btn btn-success" target="_blank" href="{{certificate.image.url}}">View Certificate</a>
+                {% endfor %}
               </div>
               {% endfor %}
 
@@ -35,7 +38,7 @@
               <div class="resume-item">
                 <h4>{{membership.title}}</h4>
                 <h5>Membsership ID - {{membership.membership_id}}</h5><br>
-                <h5>Year - {{membership.issuing_year}}</h5>
+                <h5>{{membership.issuing_year}}</h5>
                 <p><em>{{membership.issuing_body}}</em></p>
                 {% for certificate in membership.membershipcertificate_set.all %}
                 <a class="btn btn-success" target="_blank" href="{{certificate.image.url}}">View Certificate</a>
