--- a/baseapp/templates/baseapp/base.html
+++ b/baseapp/templates/baseapp/base.html
@@ -3,9 +3,9 @@
 {% load static %}
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <title>Engraya_resume</title>
+  <title>engraya</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
