--- a/baseapp/templates/baseapp/certifications.html
+++ b/baseapp/templates/baseapp/certifications.html
@@ -5,7 +5,7 @@
 
 
   <!-- ======= Portfolio Section ======= -->
-  <section id="portfolio" class="portfolio section-bg d-flex justify-content-center">
+  <section id="portfolio" class="container">
     <div class="container">
 
       <div class="section-title">
@@ -18,9 +18,8 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <img src="{{certificate.image.url}}" class="img-fluid" alt="">
-            <div class="portfolio-links">
-              <a href="{{certificate.image.url}}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+            <div class="portfolio-links align-items-center justify-content-center">
+              <a href="{{certificate.image.url}}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bg-success bx-link justify-content-center align-content-center d-flex"></i></a>
             </div>
           </div>
           <a href="#" title="More Details"><strong class="d-flex justify-content-center mt-3">{{certificate.title}}</strong></a>
