--- a/baseapp/templates/baseapp/portfolio.html
+++ b/baseapp/templates/baseapp/portfolio.html
@@ -5,7 +5,7 @@
     
  
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg d-flex justify-content-center">
+    <section id="portfolio" class="container">
         <div class="container">
   
           <div class="section-title">
