--- a/baseapp/templates/baseapp/home.html
+++ b/baseapp/templates/baseapp/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
       <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+  <section id="hero" class="container">
     <div class="hero-container" data-aos="fade-in">
       <h1>Ahmad Yakubu Ahmad</h1>
       <p>I'm <span class="typed" data-typed-items="Civil Engineer, Full Stack Developer, Freelancer"></span></p>
