--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -241,13 +241,16 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
 #hero:before {
   content: "";
   background: rgba(5, 13, 24, 0.3);
+    background: url("../img/hero-bg.jpg");
   position: absolute;
   bottom: 0;
   top: 0;
@@ -259,11 +262,18 @@ h6 {
 #hero .hero-container {
   position: relative;
   z-index: 2;
-  min-width: 300px;
+  text-align: center;
+  margin: auto;
+  padding: 250px;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 #hero h1 {
   margin: 0 0 10px 0;
+  font-family: cursive;
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
@@ -286,7 +296,7 @@ h6 {
 
 @media (min-width: 1024px) {
   #hero {
-    background-attachment: fixed;
+    background-attachment:local;
   }
 }
 
@@ -1075,13 +1085,13 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  padding: 15px;
+  padding: 10px;
   color: #f4f6fd;
   font-size: 14px;
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 290px;
+  width: 100%;
   z-index: 9999;
   background: #040b14;
 }
