Css and Styling Commit

--- a/baseapp/templates/baseapp/base.html
+++ b/baseapp/templates/baseapp/base.html
@@ -35,27 +35,19 @@
 
 <body>
 
-  <!-- ======= Mobile nav toggle button ======= -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-
-  <nav class="navbar navbar-dark bg-dark fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand monspace-font-family" href="#">Ahmad Yakubu Ahmad</a>
-      <a href="{% url 'home' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-home"></i> <span>Home</span></a>
-      <a href="{% url 'about' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-user"></i> <span>About</span></a>
-      <a href="{% url 'resume' %}" class="nav-link-lg lg link-lightscrolltoactive"><i class="bx bx-file-blank"></i> <span>Resume</span></a>
-      <a href="{% url 'portfolio' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-book-content"></i> <span>Projects</span></a>
-      <a href="{% url 'socials' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-chat"></i> <span>Socials</span></a>
-      <a href="{% url 'certifications' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-medal"></i> <span>Certifications</span></a>
-      <a href="{% url 'contact' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-envelope"></i> <span>Contact Me</span></a>
-    </div>
-
-  </nav>
-
-
-
-
-
+  <nav id="navbar" class="navbar navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand monspace-font-family" href="#">Ahmad Yakubu Ahmad</a>
+        <a href="{% url 'home' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-home"></i> <span>Home</span></a>
+        <a href="{% url 'about' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-user"></i> <span>About</span></a>
+        <a href="{% url 'resume' %}" class="nav-link-lg lg link-lightscrolltoactive"><i class="bx bx-file-blank"></i> <span>Resume</span></a>
+        <a href="{% url 'portfolio' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-book-content"></i> <span>Projects</span></a>
+        <a href="{% url 'socials' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-chat"></i> <span>Socials</span></a>
+        <a href="{% url 'certifications' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-medal"></i> <span>Certifications</span></a>
+        <a href="{% url 'contact' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-envelope"></i> <span>Contact Me</span></a>
+      </div>
+    </nav>
+  
 
 
   
