--- a/baseapp/templates/baseapp/home.html
+++ b/baseapp/templates/baseapp/home.html
@@ -1,18 +1,93 @@
-{% extends 'baseapp/base.html' %}
-
+<!DOCTYPE html>
+<html lang="en">
 {% load static %}
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-{% block content %}
+  <title>engraya</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
+
+  <!-- Favicons -->
+  <!-- <link href="{% static 'assets/img/favicon.JPG' %}" rel="icon"> -->
+  <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+
+  <!-- Google Fonts -->
+  <link href="{% static 'https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i' %}" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="{% static 'assets/vendor/aos/aos.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <nav id="navbar" class="navbar navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand monspace-font-family" href="#">Ahmad Yakubu Ahmad</a>
+        <a href="{% url 'home' %}" class="nav-link-lg"><i class="bx bx-home"></i> <span>Home</span></a>
+        <a href="{% url 'about' %}" class="nav-link-lg"><i class="bx bx-user"></i> <span>About</span></a>
+        <a href="{% url 'resume' %}" class="nav-link-lg"><i class="bx bx-file-blank"></i> <span>Resume</span></a>
+        <a href="{% url 'portfolio' %}" class="nav-link-lg"><i class="bx bx-book-content"></i> <span>Projects</span></a>
+        <a href="{% url 'socials' %}" class="nav-link-lg"><i class="bx bx-chat"></i> <span>Socials</span></a>
+        <a href="{% url 'certifications' %}" class="nav-link-lg"><i class="bx bx-medal"></i> <span>Certifications</span></a>
+        <a href="{% url 'contact' %}" class="nav-link-lg"><i class="bx bx-envelope"></i> <span>Contact Me</span></a>
+      </div>
+    </nav>
+  
+
+
+
+    <main id="main">
       <!-- ======= Hero Section ======= -->
-  <section id="hero" class="container">
-    <div class="hero-container" data-aos="fade-in">
-      <h1>Ahmad Yakubu Ahmad</h1>
-      <p>I'm <span class="typed" data-typed-items="Civil Engineer, Full Stack Developer, Freelancer"></span></p>
-    </div>
-  </section><!-- End Hero -->
-
-  <main id="main">
-
+      <section id="hero" class="container">
+        <div class="hero-container" data-aos="fade-in">
+          <h1>Ahmad Yakubu Ahmad</h1>
+          <p>I'm <span class="typed" data-typed-items="Civil Engineer, Full Stack Developer, Freelancer"></span></p>
+        </div>
+      </section><!-- End Hero -->
   </main><!-- End #main -->
-{% endblock content %}
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container container-fluid">
+      <div class="copyright">
+        &copy;<strong><span>engraya</span></strong>
+      </div>
+    </div>
+  </footer><!-- End  Footer -->
+
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center my-5"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="{% static 'assets/vendor/purecounter/purecounter_vanilla.js' %}"></script>
+  <script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
+  <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+  <script src="{% static 'assets/vendor/glightbox/js/glightbox.min.js' %}"></script>
+  <script src="{% static 'assets/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
+  <script src="{% static 'assets/vendor/swiper/swiper-bundle.min.js' %}"></script>
+  <script src="{% static 'assets/vendor/typed.js/typed.umd.js' %}"></script>
+  <script src="{% static 'assets/vendor/waypoints/noframework.waypoints.js' %}"></script>
+  <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
+
+  <!-- Template Main JS File -->
+  <script src="{% static 'assets/js/main.js' %}"></script>
+
+</body>
+
+</html>
     
