--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -9,7 +9,7 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-body {
+body, html {
   font-family: "Open Sans", sans-serif;
   color: #272829;
 }
@@ -128,30 +128,11 @@ h6 {
 }
 
 #main {
-  margin-left: 300px;
+  background: url("../img/hero-bg.jpg");
+  width: 100%;
+  height: 100vh;
 }
 
-.container,
-.container-fluid {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-@media (max-width: 1199px) {
-  #header {
-    left: -300px;
-  }
-
-  #main {
-    margin-left: 0;
-  }
-
-  .container,
-  .container-fluid {
-    padding-left: 12px;
-    padding-right: 12px;
-  }
-}
 
 /*--------------------------------------------------------------
 # Navigation Menu
@@ -241,40 +222,32 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-#hero:before {
-  content: "";
-  background: rgba(5, 13, 24, 0.3);
-    background: url("../img/hero-bg.jpg");
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-}
+
 
 #hero .hero-container {
   position: relative;
   z-index: 2;
   text-align: center;
   margin: auto;
-  padding: 250px;
+  padding: 189px;
   top:0;
   bottom: 0;
   left: 0;
   right: 0;
+  width: 100%;
+  height: 100vh;
 }
 
 #hero h1 {
-  margin: 0 0 10px 0;
   font-family: cursive;
   font-size: 64px;
+  display: flex;
+  justify-content: center;
   font-weight: 700;
   line-height: 56px;
   color: #fff;
@@ -282,6 +255,7 @@ h6 {
 
 #hero p {
   color: #fff;
+  justify-content: center;
   margin-bottom: 50px;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
