--- a/baseapp/templates/baseapp/base.html
+++ b/baseapp/templates/baseapp/base.html
@@ -11,6 +11,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
 
   <!-- Favicons -->
+   <!-- Favicons -->
+   <link href="{% static 'assets/img/engraya.jpg' %}" rel="icon">
+   <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
   <!-- <link href="{% static 'assets/img/favicon.JPG' %}" rel="icon"> -->
   <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
