Some issues fixed

--- a/baseapp/templates/baseapp/certifications.html
+++ b/baseapp/templates/baseapp/certifications.html
@@ -19,10 +19,10 @@
           <div class="portfolio-wrap">
             <img src="{{certificate.image.url}}" class="img-fluid" alt="">
             <div class="portfolio-links align-items-center justify-content-center">
-              <a href="{{certificate.image.url}}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bg-success bx-link justify-content-center align-content-center d-flex"></i></a>
+              <a href="{{certificate.image.url}}" data-gallery="portfolioGallery" class="portfolio-lightbox align-items-center justify-content-center d-flex" title="App 1"><button class="btn btn-sm btn-success align-items-center justify-content-center d-flex float-center">View</button></a>
             </div>
           </div>
-          <a href="#" title="More Details"><strong class="d-flex justify-content-center mt-3">{{certificate.title}}</strong></a>
+          <strong class="d-flex justify-content-center mt-3">{{certificate.title}}</strong>
           <hr>
         </div>
         {% endfor %}
