--- a/baseapp/templates/baseapp/base.html
+++ b/baseapp/templates/baseapp/base.html
@@ -18,7 +18,7 @@
   <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
   <!-- Google Fonts -->
   <link href="{% static 'https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i' %}" rel="stylesheet">
@@ -33,6 +33,7 @@
 
   <!-- Template Main CSS File -->
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
+  
 
 </head>
 
@@ -40,14 +41,14 @@
 
   <nav id="navbar" class="navbar navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand monspace-font-family" href="#">Ahmad Yakubu Ahmad</a>
-        <a href="{% url 'home' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-home"></i> <span>Home</span></a>
-        <a href="{% url 'about' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-user"></i> <span>About</span></a>
-        <a href="{% url 'resume' %}" class="nav-link-lg lg link-lightscrolltoactive"><i class="bx bx-file-blank"></i> <span>Resume</span></a>
-        <a href="{% url 'portfolio' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-book-content"></i> <span>Projects</span></a>
-        <a href="{% url 'socials' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-chat"></i> <span>Socials</span></a>
-        <a href="{% url 'certifications' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-medal"></i> <span>Certifications</span></a>
-        <a href="{% url 'contact' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-envelope"></i> <span>Contact Me</span></a>
+        <a class="navbar-brand monspace-font-family" href="{% url 'home' %}">Ahmad Yakubu Ahmad</a>
+        <a href="{% url 'home' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-home bx-light bx-sm"></i> <span>Home</span></a>
+        <a href="{% url 'about' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-user bx-sm"></i> <span>About</span></a>
+        <a href="{% url 'resume' %}" class="nav-link-lg lg link-lightscrolltoactive"><i class="bx bx-file-blank bx-sm"></i> <span>Resume</span></a>
+        <a href="{% url 'portfolio' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-book-content bx-sm"></i> <span>Projects</span></a>
+        <a href="{% url 'socials' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-chat bx-sm"></i> <span>Socials</span></a>
+        <a href="{% url 'certifications' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-medal bx-sm"></i> <span>Certifications</span></a>
+        <a href="{% url 'contact' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-envelope bx-sm"></i> <span>Contact Me</span></a>
       </div>
     </nav>
   
@@ -70,7 +71,7 @@
   <footer id="footer">
     <div class="container container-fluid">
       <div class="copyright">
-        &copy;<strong><span>engraya</span></strong>
+        &copy;<strong><span>engrahmadaya</span></strong>
       </div>
     </div>
   </footer><!-- End  Footer -->
