--- a/baseapp/templates/baseapp/home.html
+++ b/baseapp/templates/baseapp/home.html
@@ -40,14 +40,14 @@
 
   <nav id="navbar" class="navbar navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand monspace-font-family" href="#">Ahmad Yakubu Ahmad</a>
-        <a href="{% url 'home' %}" class="nav-link-lg"><i class="bx bx-home"></i> <span>Home</span></a>
-        <a href="{% url 'about' %}" class="nav-link-lg"><i class="bx bx-user"></i> <span>About</span></a>
-        <a href="{% url 'resume' %}" class="nav-link-lg"><i class="bx bx-file-blank"></i> <span>Resume</span></a>
-        <a href="{% url 'portfolio' %}" class="nav-link-lg"><i class="bx bx-book-content"></i> <span>Projects</span></a>
-        <a href="{% url 'socials' %}" class="nav-link-lg"><i class="bx bx-chat"></i> <span>Socials</span></a>
-        <a href="{% url 'certifications' %}" class="nav-link-lg"><i class="bx bx-medal"></i> <span>Certifications</span></a>
-        <a href="{% url 'contact' %}" class="nav-link-lg"><i class="bx bx-envelope"></i> <span>Contact Me</span></a>
+        <a class="navbar-brand monspace-font-family" href="{% url 'home' %}">Ahmad Yakubu Ahmad</a>
+        <a href="{% url 'home' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-home bx-light bx-sm"></i><span class="text-white">Home</span></a>
+        <a href="{% url 'about' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-user bx-sm"></i> <span class="text-white">About</span></a>
+        <a href="{% url 'resume' %}" class="nav-link-lg lg link-lightscrolltoactive"><i class="bx bx-file-blank bx-sm"></i> <span class="text-white">Resume</span></a>
+        <a href="{% url 'portfolio' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-book-content bx-sm"></i> <span class="text-white">Projects</span></a>
+        <a href="{% url 'socials' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-chat bx-sm"></i> <span class="text-white">Socials</span></a>
+        <a href="{% url 'certifications' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-medal bx-sm"></i> <span class="text-white">Certifications</span></a>
+        <a href="{% url 'contact' %}" class="nav-link-lg lg link-lightscrollto active"><i class="bx bx-envelope bx-sm"></i> <span class="text-white">Contact Me</span></a>
       </div>
     </nav>
   
@@ -68,7 +68,7 @@
   <footer id="footer">
     <div class="container container-fluid">
       <div class="copyright">
-        &copy;<strong><span>engraya</span></strong>
+        &copy;<strong><span>engrahmadaya</span></strong>
       </div>
     </div>
   </footer><!-- End  Footer -->
