--- a/baseapp/templates/baseapp/portfolio-details.html
+++ b/baseapp/templates/baseapp/portfolio-details.html
@@ -4,17 +4,16 @@
 {% block content  %}
     
  
-<main id="main">
+<div class="container">
 
   <!-- ======= Breadcrumbs ======= -->
   <section id="breadcrumbs" class="breadcrumbs">
     <div class="container">
 
       <div class="d-flex justify-content-between align-items-center">
-        <h2>Portfoio Details</h2>
+        <h2>Project Details</h2>
         <ol>
-          <li><a href="index.html">Home</a></li>
-          <li>Portfoio Details</li>
+          <li><a href="{% url 'portfolio' %}" class="btn btn-sm btn-danger">Back to Projects</a></li>
         </ol>
       </div>
 
@@ -67,7 +66,7 @@
     </div>
   </section><!-- End Portfolio Details Section -->
 
-</main><!-- End #main -->
+</div>
 
 {% endblock content  %}
     
