--- a/baseapp/templates/baseapp/portfolio-details.html
+++ b/baseapp/templates/baseapp/portfolio-details.html
@@ -4,7 +4,7 @@
 {% block content  %}
     
  
-<div class="container">
+<div class="container pt-3 mt-3">
 
   <!-- ======= Breadcrumbs ======= -->
   <section id="breadcrumbs" class="breadcrumbs">
